# zic-protocol

./: COPYING  ChangeLog  Makefile.am  README  README.md  RFC  configure.ac  example.pl  rebuild.sh
src/json/: zic.json
src/pb/: main.proto  zic.proto
src/xml/: main.xsd
